qterminal-0.17.0 / 2021-04-15
=============================
  * Some code cleanup and modernization.
  * Removed two warnings that were shown when QTerminal was started.
  * Added an option to disable bracketed paste mode.
  * Moved the paste-related codes to qtermwidget.
  * Made "Action after paste" clearer and default to "Scrolling to bottom".
  * Added a tooltip about bracketed paste mode.
  * Added modes for background image.

qterminal-0.16.1 / 2020-11-14
=============================
  * Fixed a mistake in the layout of Terminal settings dialog.
  * Fixed translation of shortcuts (in Terminal settings dialog).

qterminal-0.16.0 / 2020-11-01
=============================

  * Made closing of tab on middle-clicking optional.
  * Avoid loop variable copy.
  * Emit signals with Q_EMIT.
  * Use the default constructor of QFlags.
  * Dropped qmake .pro file.
  * Made the color scheme dirs comply with XDG Base Directory Specification.
  * Added an optopn for openning the new tab to the right of the active tab.
  * Added virtual destructor to a base class.
  * Let QStandardPaths::locateAll() handle application name.
  * Put drop-down QTerminal on screen with cursor.

qterminal-0.15.0 / 2020-04-24
=============================

  * Bumped version to 0.15.0.
  * CMakeLists: Do not use Qt5X11Extras on macOS.
  * Replace deprecated/removed Q_WS_MAC macro with Q_OS_MACOS.
  * Fixed the default font on macOS.
  * Fixed the missing PASTE_SELECTION_SHORTCUT on macOS.
  * Fixed inconsistent-missing-override warnings.
  * Scrollable and compact Settings dialog.
  * C++11 code updates.
  * Fix View → Toggle Bookmarks.
  * Consider settings dialog frame on fitting it into screen.
  * Fixed the duplicated setHistorySize() call.
  * Create actions for switching to tab by index.
  * Allow to disable drawing line chars.
  * Made the initial terminal size consistent with qterminal.ui.
  * Fixed building qterminal.app on macOS.
  * No more incorrectly setting icon via OSC 1.