@@ -1,3 +1,11 @@
+qterminal-1.0.0 / 2021-11-04
+=============================
+ * Bumped minimum required Qt version to 5.15.
+ * Respect preset splitting on opening new window and double clicking tab-bar.
+ * Trim shell strings.
+ * Added an option for keeping drop-down window open.
+ * Don't try to move window under Wayland (fixes menu positions).
+
 qterminal-0.17.0 / 2021-04-15
 =============================
   * Some code cleanup and modernization.
